# pr3d

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Docker.md  Dockerfile.base  README.md  cond_rnn_example.py  dataset.py  emm_train.py  emm_train_plot.py  emm_train_save_example.py  example.py  example_conditional.py  example_gamma_mevm_conditional.py  example_nonconditional.py  example_nonconditional_plot.py  example_sample_cond.py  example_training_conf.json  fit_plot.py  gemm_train.py  gemm_train_plot.py  gmm_load_example.py  gmm_model.h5  gmm_train.py  gmm_train_save_example.py  plot_bnn_conditionals.py  plot_conditionals.py  plot_conditionals_with_tis.py  pyproject.toml  requirements.txt  rnn_example.py  setup.cfg  setup.py  shared_memory_comm.py  test.py  test_bnn.py  test_bnn_tis.py  test_find_roof.py  test_find_root.py  (+5 more)
bayesian/: __init__.py  bayesian_core.py  bayesian_core_repar.py
cde/: BaseConditionalDensity.py  ConditionalEMM.py  ConditionalGammaEMM.py  ConditionalGammaEVM.py  ConditionalGaussian.py  CoreNetwork.py  Dataset.py  GammaEVM.py  __init__.py  ev_mixture_tf.py
de/: CoreNetwork.py  __init__.py
docker/: Docker.md  Dockerfile.base  Dockerfile.pr3d
evaluation/: evaluate_model.py  evaluate_model_dual.py  print_evaluation.py  print_evaluation_agg.py  print_evaluation_dual.py
legacy_examples/: example_conditional.py  gmm_train.py  plot_conditionals_with_tis.py  test_sampling_cond.py  test_slice_sampler.py  train_with_tis.py
misc/: GammaEVM_.py  test.py
scripts/: shared_memory_comm.py
training/: prep_train_data.py  (+3 more)
(+77 files in other folders)
