[metadata]
name = pr3d
version = attr: pr3d.__version__
author = Seyed Samie Mostafavi
author_email = samiemostafavi@gmail.com
url = https://github.com/samiemostafavi/pr3d
description = Delay density prediction using Tensorflow
long_description = file: README.md
long_description_content_type = text/markdown
keywords = conditional density estimation, deep learning, tensorflow, python
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
install_requires =
    numpy
    h5py
    protobuf==3.20.1
    keras==2.8.0
    tensorflow==2.8.0
    tensorflow-probability==0.16.0

[options.packages.find]
include=pr3d*
exclude=docker, test, utils

[options.extras_require]
dev =
    pandas
    pyarrow
    pynverse
    matplotlib
    seaborn
    tensorflow-datasets==4.6.0
    scipy==1.8